[package]
name = "bench_scraper"
version = "0.4.2"
edition = "2021"
authors = ["Glen Oakley <goakley123@gmail.com>"]
description = "A library for grabbing browser cookies from a filesystem"
documentation = "https://docs.rs/bench_scraper"
readme = "README.md"
repository = "https://github.com/goakley/bench_scraper/"
license = "MIT OR Apache-2.0"
keywords = ["browser", "firefox", "chrome", "chromium", "cookies"]
categories = ["filesystem", "network-programming", "web-programming"]

[lib]
name = "bench_scraper"
path = "src/lib.rs"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
block-padding = "0.3.3"
cbc = "0.1.2"
dirs = "5.0.1"
json_dotpath = "1.1.0"
libsqlite3-sys = "0.28.0"
log = "0.4.21"
nom = "7.1.3"
pbkdf2 = { version = "0.12.2", features = ["sha1", "simple"] }
reqwest = { version = "0.12.4", default-features = false, features = ["cookies"], optional = true }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.201"
serde_json = "1.0.117"
strum = "0.26.2"
strum_macros = "0.26.2"
tempfile = "3.10.1"
time = { version = "0.3.36", features = ["formatting"] }
walkdir = "2.5.0"

[dev-dependencies]
bench_scraper = { path = ".", features = ["reqwest"] }
csv = "1.3.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "cookies", "default-tls"] }

[target.'cfg(target_os="linux")'.dependencies]
secret-service = { version = "3.0.1", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["dpapi", "winbase"] }

[features]
reqwest = ["dep:reqwest"]
